--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,55 @@
     transform: rotate(360deg);
   }
 }
+
+body  {
+  background-color: #282c34;
+}
+.register__form  {
+  margin-top: 10%;
+  display: flex;
+  justify-content: center;
+}
+.modal_form_register {
+  padding: 10px;
+  width: 300px;
+  background-color: white;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.inpute_forms {
+  margin-bottom: 10px;
+}
+input {
+  width: 270px;
+  border-radius: 5px;
+  border: none;
+  height: 30px;
+  background-color: #cecccc;
+}
+
+.registere_success  {
+  width: 280px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  background-color: #4393FD;
+  text-align: center;
+}
+.registered {
+  color: rgb(255, 253, 251);
+}
+
+button  {
+  width: 280px;
+  border-radius: 10px;
+  border: none;
+  background-color: #4AA052;
+  color: white;
+  height: 40px;
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
