--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@ input {
   border-radius: 5px;
   border: none;
   height: 30px;
-  background-color: #cecccc;
+  background-color: rgb(232, 240, 254);
 }
 
 .registere_success  {
